# erl_simulations

./: CMakeLists.txt  LICENSE  README.md  package.xml  setup_models.sh
launch/: erl_chaos.launch  erl_randy.launch  erl_randys.launch  erl_static.launch  spawn_husky.launch
models/: husky.urdf.xacro
models/erl_maze/: model.config  model.sdf
models/marker_blue/: model.config  model.sdf
models/marker_green/: model.config  model.sdf
models/rescue_randy_sitting_recolored/: model.sdf
rviz/: example.rviz
worlds/: erl_chaos.world  erl_chaos_w_randy.world  erl_chaos_w_randys.world  erl_static.world  erl_static_w_randy.world  erl_static_w_randys.world
